--- a/Frontend/src/pages/Steps/StepAvatar/StepAvatar.module.css
+++ b/Frontend/src/pages/Steps/StepAvatar/StepAvatar.module.css
@@ -40,9 +40,17 @@
 .avatarBorder {
     border: 5px solid #007bff;
     border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .avatarInput{
-display: block;
-margin:20px auto 0;
-width: 80px;
+display: none;
+}
+.avatarLabel{
+color:#007bff;
+margin:30px 0;
+
+
 }
